@@ -1,6 +1,11 @@
-2002-06-15  Chris Abbey  <cabbey@cabbey.net>
+2002-06-17  Eric Blake  <ebb9@email.byu.edu>
 
-	* arc/unparse.cpp (AstCompilationUnit::Unparse): fix definition
+	* src/bytecode.cpp (EmitSwitchStatement): Don't optimize gotos
+	with no-op default label - bug 2895.
+
+2002-06-15  Chris Abbey  <jikes@cabbey.net>
+
+	* src/unparse.cpp (AstCompilationUnit::Unparse): fix definition
 	signature to match declaration signature in ast.h; AIX's xlC
 	compiler isn't as sloppy as gcc about signature constnes.
 
